Cria testes unitários para os serviços