@@ -1,8 +1,12 @@
 package br.com.cremepe.jeton.service;
 
 import br.com.cremepe.jeton.domain.*;
-import br.com.cremepe.jeton.repository.*;
-import org.junit.jupiter.api.BeforeEach;
+import br.com.cremepe.jeton.repository.AtividadeConselhalRepository;
+import br.com.cremepe.jeton.repository.ComprovanteRepository;
+import br.com.cremepe.jeton.repository.GestaoConselheiroRepository;
+import br.com.cremepe.jeton.repository.GestaoRepository;
+import br.com.cremepe.jeton.util.AtividadeValidator;
+import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
@@ -10,575 +14,525 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
-import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
-import org.springframework.data.domain.Sort;
-import org.springframework.dao.DataIntegrityViolationException;
 import org.springframework.web.multipart.MultipartFile;
 
 import java.time.LocalDate;
 import java.time.LocalDateTime;
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.mockito.ArgumentMatchers.*;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
+@DisplayName("Testes do serviço de Atividades Conselhais")
 class AtividadeConselhalServiceTest {
 
     @Mock
-    private AtividadeConselhalRepository atividadeRepository;
+    private AtividadeConselhalRepository atividadeRepositoryMock;
 
     @Mock
-    private ComprovanteRepository comprovanteRepository;
+    private ComprovanteRepository comprovanteRepositoryMock;
 
     @Mock
-    private GestaoRepository gestaoRepository;
+    private GestaoRepository gestaoRepositoryMock;
 
     @Mock
-    private GestaoConselheiroRepository gestaoConselheiroRepository;
+    private GestaoConselheiroRepository gestaoConselheiroRepositoryMock;
 
     @Mock
-    private ComprovanteService comprovanteService;
+    private ComprovanteService comprovanteServiceMock;
+
+    @Mock
+    private LogJetonService logJetonServiceMock;
+
+    @Mock
+    private AtividadeValidator atividadeValidatorMock;
 
     @InjectMocks
     private AtividadeConselhalService service;
 
-    private Gestao gestao;
-    private Conselheiro conselheiro;
-    private Regras regra;
-    private AtividadeConselhal atividade;
-    private MultipartFile mockFile;
+    // ========== HELPERS ==========
 
-    @BeforeEach
-    void setUp() {
-        gestao = new Gestao();
-        gestao.setIdGestao(1);
-        gestao.setDtInicio(LocalDate.of(2025, 1, 1));
-        gestao.setDtFim(LocalDate.of(2025, 12, 31));
+    private Gestao criarGestao(Integer id, LocalDate inicio, LocalDate fim) {
+        Gestao g = new Gestao();
+        g.setIdGestao(id);
+        g.setDtInicio(inicio);
+        g.setDtFim(fim);
+        g.setNomeGestao("Gestão Teste");
+        return g;
+    }
 
-        conselheiro = new Conselheiro();
-        conselheiro.setIdPessoa(10);
-        Pessoa pessoa = new Pessoa();
-        pessoa.setNome("Dr. Teste");
-        conselheiro.setPessoa(pessoa);
+    private Conselheiro criarConselheiro(Integer id) {
+        Pessoa p = new Pessoa();
+        p.setIdPessoa(id);
+        p.setNome("Médico Teste");
+        Conselheiro c = new Conselheiro();
+        c.setIdPessoa(id);
+        c.setPessoa(p);
+        c.setInSituacao(Conselheiro.SITUACAO_ATIVO);
+        return c;
+    }
 
-        regra = new Regras();
-        regra.setIdRegra(100);
+    private Regras criarRegra(Integer id) {
+        Regras r = new Regras();
+        r.setIdRegra(id);
+        r.setNomeRegra("Regra Teste");
+        r.setPontos(2);
+        return r;
+    }
 
-        atividade = new AtividadeConselhal();
-        atividade.setIdAtividade(null);
+    private Comprovante criarComprovante(Integer id) {
+        Comprovante c = new Comprovante();
+        c.setIdComprovante(id);
+        c.setNomeComprovante("Comprovante Teste");
+        c.setNomeArquivo("arquivo.pdf");
+        c.setMes(6);
+        c.setAno(2026);
+        return c;
+    }
+
+    private AtividadeConselhal criarAtividade(Integer id, Gestao gestao, Conselheiro conselheiro, Regras regra,
+            Comprovante comprovante, String situacao) {
+        AtividadeConselhal a = new AtividadeConselhal();
+        a.setIdAtividade(id);
+        a.setGestao(gestao);
+        a.setConselheiro(conselheiro);
+        a.setRegra(regra);
+        a.setComprovante(comprovante);
+        a.setQtdAtividade(1);
+        a.setDataHoraAtividade(LocalDateTime.now());
+        a.setDataHoraRegistro(LocalDateTime.now());
+        a.setInTurno(AtividadeConselhal.TURNO_MANHA);
+        a.setInSituacao(situacao);
+        a.setInComputada(AtividadeConselhal.COMPUTADA_NAO);
+        return a;
+    }
+
+    // ========== TESTES DE CRIAÇÃO ==========
+
+    @Test
+    @DisplayName("deve criar atividade sem comprovante com sucesso")
+    void deveCriarAtividadeSemComprovante() {
+        // Dado
+        Integer idGestao = 1;
+        Integer idConselheiro = 10;
+        Integer idRegra = 5;
+        LocalDateTime dataHora = LocalDateTime.now();
+
+        Gestao gestao = criarGestao(idGestao, LocalDate.now().minusMonths(1), LocalDate.now().plusMonths(1));
+        Conselheiro conselheiro = criarConselheiro(idConselheiro);
+        Regras regra = criarRegra(idRegra);
+
+        AtividadeConselhal atividade = new AtividadeConselhal();
         atividade.setGestao(gestao);
         atividade.setConselheiro(conselheiro);
         atividade.setRegra(regra);
-        atividade.setDataHoraAtividade(LocalDateTime.of(2025, 6, 15, 14, 30));
-        atividade.setQtdAtividade(2);
-        atividade.setInSituacao(AtividadeConselhal.SITUACAO_PENDENTE);
-        atividade.setInTurno(AtividadeConselhal.TURNO_TARDE);
+        atividade.setDataHoraAtividade(dataHora);
+        atividade.setQtdAtividade(1);
 
-        mockFile = mock(MultipartFile.class);
-    }
+        // Configura mocks do validator
+        doNothing().when(atividadeValidatorMock).validarDataHoraObrigatoria(dataHora);
+        when(atividadeValidatorMock.validarGestaoExistente(idGestao)).thenReturn(gestao);
+        doNothing().when(atividadeValidatorMock).validarVinculoConselheiroGestao(idConselheiro, idGestao);
+        doNothing().when(atividadeValidatorMock).validarDataDentroDoMandato(dataHora.toLocalDate(), idGestao);
 
-    // =========================================================================
-    // Testes do método criar()
-    // =========================================================================
-
-    @Test
-    void criar_quandoSucessoSemComprovante_deveSalvarAtividade() {
-        when(gestaoRepository.findById(1)).thenReturn(Optional.of(gestao));
-        when(gestaoConselheiroRepository.findByIdIdGestao(1))
-                .thenReturn(List.of(createVinculo(gestao, conselheiro)));
-        when(atividadeRepository.save(any(AtividadeConselhal.class))).thenAnswer(inv -> {
+        // Mock do save
+        when(atividadeRepositoryMock.save(any(AtividadeConselhal.class))).thenAnswer(inv -> {
             AtividadeConselhal a = inv.getArgument(0);
-            a.setIdAtividade(1);
+            a.setIdAtividade(100);
             return a;
         });
 
-        AtividadeConselhal resultado = service.criar(atividade, null, null, null);
+        // Quando
+        AtividadeConselhal salva = service.criar(atividade, null, null, null);
 
-        assertNotNull(resultado);
-        assertEquals(1, resultado.getIdAtividade());
-        assertNotNull(resultado.getDataHoraRegistro());
-        assertEquals(AtividadeConselhal.SITUACAO_PENDENTE, resultado.getInSituacao());
-        assertEquals(2, resultado.getQtdAtividade());
-        verify(atividadeRepository, times(1)).save(any());
-        verify(comprovanteService, never()).criarComprovante(any(), any(), any());
+        // Então
+        assertThat(salva.getIdAtividade()).isEqualTo(100);
+        assertThat(salva.getDataHoraRegistro()).isNotNull();
+        assertThat(salva.getInSituacao()).isEqualTo(AtividadeConselhal.SITUACAO_PENDENTE);
+        assertThat(salva.getComprovante()).isNull();
+        assertThat(salva.getQtdAtividade()).isEqualTo(1);
+        assertThat(salva.getGestao()).isEqualTo(gestao);
+
+        verify(atividadeRepositoryMock).save(any(AtividadeConselhal.class));
+        verify(logJetonServiceMock).logAtividadeCriada(salva);
+        verify(comprovanteServiceMock, never()).criar(any(), any(), any());
     }
 
     @Test
-    void criar_quandoComprovanteEnviado_deveCriarComprovante() {
-        Comprovante comprovante = new Comprovante();
-        comprovante.setIdComprovante(5);
-        when(comprovanteService.criarComprovante(eq(mockFile), eq(1), eq("Desc"))).thenReturn(comprovante);
-        when(gestaoRepository.findById(1)).thenReturn(Optional.of(gestao));
-        when(gestaoConselheiroRepository.findByIdIdGestao(1))
-                .thenReturn(List.of(createVinculo(gestao, conselheiro)));
-        when(atividadeRepository.save(any(AtividadeConselhal.class))).thenAnswer(inv -> inv.getArgument(0));
+    @DisplayName("deve criar atividade com comprovante com sucesso")
+    void deveCriarAtividadeComComprovante() throws Exception {
+        // Dado
+        Integer idGestao = 1;
+        Integer idConselheiro = 10;
+        Integer idRegra = 5;
+        Integer idTipoAnexo = 2;
+        String nomeComprovante = "Ata Reunião";
+        MultipartFile fileMock = mock(MultipartFile.class);
+        when(fileMock.isEmpty()).thenReturn(false);
 
-        AtividadeConselhal resultado = service.criar(atividade, mockFile, 1, "Desc");
+        Gestao gestao = criarGestao(idGestao, LocalDate.now().minusMonths(1), LocalDate.now().plusMonths(1));
+        Conselheiro conselheiro = criarConselheiro(idConselheiro);
+        Regras regra = criarRegra(idRegra);
+        Comprovante comprovante = criarComprovante(200);
 
-        assertNotNull(resultado.getComprovante());
-        assertEquals(5, resultado.getComprovante().getIdComprovante());
-        verify(comprovanteService, times(1)).criarComprovante(mockFile, 1, "Desc");
-        verify(atividadeRepository, times(1)).save(any());
+        AtividadeConselhal atividade = new AtividadeConselhal();
+        atividade.setGestao(gestao);
+        atividade.setConselheiro(conselheiro);
+        atividade.setRegra(regra);
+        atividade.setDataHoraAtividade(LocalDateTime.now());
+        atividade.setQtdAtividade(1);
+
+        // Configura mocks do validator
+        doNothing().when(atividadeValidatorMock).validarDataHoraObrigatoria(any());
+        when(atividadeValidatorMock.validarGestaoExistente(idGestao)).thenReturn(gestao);
+        doNothing().when(atividadeValidatorMock).validarVinculoConselheiroGestao(idConselheiro, idGestao);
+        doNothing().when(atividadeValidatorMock).validarDataDentroDoMandato(any(), eq(idGestao));
+
+        when(comprovanteServiceMock.criar(fileMock, idTipoAnexo, nomeComprovante)).thenReturn(comprovante);
+
+        when(atividadeRepositoryMock.save(any(AtividadeConselhal.class))).thenAnswer(inv -> {
+            AtividadeConselhal a = inv.getArgument(0);
+            a.setIdAtividade(101);
+            return a;
+        });
+
+        // Quando
+        AtividadeConselhal salva = service.criar(atividade, fileMock, idTipoAnexo, nomeComprovante);
+
+        // Então
+        assertThat(salva.getIdAtividade()).isEqualTo(101);
+        assertThat(salva.getComprovante()).isNotNull();
+        assertThat(salva.getComprovante().getIdComprovante()).isEqualTo(200);
+
+        verify(comprovanteServiceMock).criar(fileMock, idTipoAnexo, nomeComprovante);
+        verify(logJetonServiceMock).logAtividadeCriada(salva);
     }
 
     @Test
-    void criar_quandoQtdAtividadeNullOuZero_deveSetarUm() {
-        atividade.setQtdAtividade(null);
-        when(gestaoRepository.findById(1)).thenReturn(Optional.of(gestao));
-        when(gestaoConselheiroRepository.findByIdIdGestao(1))
-                .thenReturn(List.of(createVinculo(gestao, conselheiro)));
-        when(atividadeRepository.save(any(AtividadeConselhal.class))).thenAnswer(inv -> inv.getArgument(0));
+    @DisplayName("deve lançar exceção ao criar atividade com data/hora nula")
+    void deveLancarExcecaoQuandoDataHoraNula() {
+        AtividadeConselhal atividade = new AtividadeConselhal();
+        atividade.setDataHoraAtividade(null);
 
-        AtividadeConselhal resultado = service.criar(atividade, null, null, null);
+        doThrow(new RuntimeException("Data/hora obrigatória"))
+                .when(atividadeValidatorMock).validarDataHoraObrigatoria(null);
 
-        assertEquals(1, resultado.getQtdAtividade());
+        assertThatThrownBy(() -> service.criar(atividade, null, null, null))
+                .isInstanceOf(RuntimeException.class)
+                .hasMessage("Data/hora obrigatória");
+
+        verify(atividadeRepositoryMock, never()).save(any());
+    }
+
+    // ========== TESTES DE ATUALIZAÇÃO ==========
+
+    @Test
+    @DisplayName("deve atualizar atividade sem alterar comprovante com sucesso")
+    void deveAtualizarAtividadeSemAlterarComprovante() {
+        // Dado
+        Integer idAtividade = 50;
+        Integer idGestao = 1;
+        Integer idConselheiro = 10;
+
+        Gestao gestao = criarGestao(idGestao, LocalDate.now().minusMonths(1), LocalDate.now().plusMonths(1));
+        Conselheiro conselheiro = criarConselheiro(idConselheiro);
+        Regras regra = criarRegra(5);
+        Comprovante comprovante = criarComprovante(300);
+
+        AtividadeConselhal existente = criarAtividade(idAtividade, gestao, conselheiro, regra, comprovante,
+                AtividadeConselhal.SITUACAO_PENDENTE);
+
+        AtividadeConselhal nova = new AtividadeConselhal();
+        nova.setIdAtividade(idAtividade);
+        nova.setGestao(gestao);
+        nova.setConselheiro(conselheiro);
+        nova.setRegra(regra);
+        nova.setDataHoraAtividade(LocalDateTime.now().plusDays(1));
+        nova.setQtdAtividade(2);
+        nova.setInSituacao(AtividadeConselhal.SITUACAO_PENDENTE);
+
+        when(atividadeRepositoryMock.findById(idAtividade)).thenReturn(Optional.of(existente));
+        doNothing().when(atividadeValidatorMock).validarAtividadeNaoFechada(existente);
+        doNothing().when(atividadeValidatorMock).validarDataHoraObrigatoria(any());
+        when(atividadeValidatorMock.validarGestaoExistente(idGestao)).thenReturn(gestao);
+        doNothing().when(atividadeValidatorMock).validarVinculoConselheiroGestao(idConselheiro, idGestao);
+        doNothing().when(atividadeValidatorMock).validarDataDentroDoMandato(any(), eq(idGestao));
+
+        when(atividadeRepositoryMock.save(any(AtividadeConselhal.class))).thenReturn(nova);
+
+        // Quando
+        AtividadeConselhal atualizada = service.atualizar(nova, null, null, null, null);
+
+        // Então
+        assertThat(atualizada.getDataHoraAtividade()).isEqualTo(nova.getDataHoraAtividade());
+        assertThat(atualizada.getQtdAtividade()).isEqualTo(2);
+        assertThat(atualizada.getComprovante()).isSameAs(comprovante); // mantido
+
+        verify(atividadeRepositoryMock).save(any());
+        verify(logJetonServiceMock).logAtividadeAtualizada(any(), any());
+        verify(comprovanteServiceMock, never()).excluir(anyInt());
+        verify(atividadeRepositoryMock, never()).desvincularComprovante(anyInt());
     }
 
     @Test
-    void criar_quandoGestaoNaoEncontrada_lancaExcecao() {
-        when(gestaoRepository.findById(1)).thenReturn(Optional.empty());
-        RuntimeException ex = assertThrows(RuntimeException.class,
-                () -> service.criar(atividade, null, null, null));
-        assertEquals("A gestão informada não foi encontrada no sistema.", ex.getMessage());
-        verify(atividadeRepository, never()).save(any());
+    @DisplayName("deve atualizar atividade substituindo o comprovante e excluir o antigo se não houver mais vínculos")
+    void deveAtualizarAtividadeSubstituindoComprovante() throws Exception {
+        // Dado
+        Integer idAtividade = 50;
+        Integer idComprovanteAntigo = 300;
+        Integer idTipoAnexo = 2;
+        String nomeComprovante = "Novo Comprovante";
+        MultipartFile fileMock = mock(MultipartFile.class);
+        when(fileMock.isEmpty()).thenReturn(false);
+
+        Gestao gestao = criarGestao(1, LocalDate.now().minusMonths(1), LocalDate.now().plusMonths(1));
+        Conselheiro conselheiro = criarConselheiro(10);
+        Regras regra = criarRegra(5);
+        Comprovante comprovanteAntigo = criarComprovante(idComprovanteAntigo);
+
+        AtividadeConselhal existente = criarAtividade(idAtividade, gestao, conselheiro, regra, comprovanteAntigo,
+                AtividadeConselhal.SITUACAO_PENDENTE);
+
+        Comprovante novoComprovante = criarComprovante(400);
+
+        AtividadeConselhal nova = new AtividadeConselhal();
+        nova.setIdAtividade(idAtividade);
+        nova.setGestao(gestao);
+        nova.setConselheiro(conselheiro);
+        nova.setRegra(regra);
+        nova.setDataHoraAtividade(LocalDateTime.now().plusDays(1));
+        nova.setQtdAtividade(1);
+
+        // Mocks de comportamento
+        when(atividadeRepositoryMock.findById(idAtividade)).thenReturn(Optional.of(existente));
+        doNothing().when(atividadeValidatorMock).validarAtividadeNaoFechada(existente);
+        doNothing().when(atividadeValidatorMock).validarDataHoraObrigatoria(any());
+        when(atividadeValidatorMock.validarGestaoExistente(1)).thenReturn(gestao);
+        doNothing().when(atividadeValidatorMock).validarVinculoConselheiroGestao(10, 1);
+        doNothing().when(atividadeValidatorMock).validarDataDentroDoMandato(any(), eq(1));
+
+        when(comprovanteServiceMock.criar(fileMock, idTipoAnexo, nomeComprovante)).thenReturn(novoComprovante);
+        when(atividadeRepositoryMock.save(any(AtividadeConselhal.class))).thenReturn(nova);
+        when(atividadeRepositoryMock.countByComprovanteIdComprovante(idComprovanteAntigo)).thenReturn(0L);
+
+        doNothing().when(atividadeRepositoryMock).desvincularComprovante(idAtividade);
+        when(comprovanteRepositoryMock.findById(idComprovanteAntigo))
+                .thenReturn(Optional.of(comprovanteAntigo));
+
+        // Quando
+        AtividadeConselhal atualizada = service.atualizar(nova, fileMock, idTipoAnexo, nomeComprovante,
+                idComprovanteAntigo);
+
+        // Então
+        assertThat(atualizada.getComprovante()).isEqualTo(novoComprovante);
+
+        verify(atividadeRepositoryMock).desvincularComprovante(idAtividade);
+        verify(comprovanteServiceMock).excluir(idComprovanteAntigo);
+        verify(logJetonServiceMock).logAtividadeAtualizada(any(), any());
     }
 
     @Test
-    void criar_quandoConselheiroNaoVinculado_lancaExcecao() {
-        when(gestaoRepository.findById(1)).thenReturn(Optional.of(gestao));
-        when(gestaoConselheiroRepository.findByIdIdGestao(1)).thenReturn(Collections.emptyList());
+    @DisplayName("deve lançar exceção ao tentar atualizar atividade já fechada")
+    void deveLancarExcecaoAoAtualizarAtividadeFechada() {
+        Integer idAtividade = 50;
+        AtividadeConselhal existente = criarAtividade(idAtividade, null, null, null, null,
+                AtividadeConselhal.SITUACAO_FECHADA);
 
-        RuntimeException ex = assertThrows(RuntimeException.class,
-                () -> service.criar(atividade, null, null, null));
-        assertEquals("O médico selecionado não possui vínculo ativo com a Gestão informada.", ex.getMessage());
+        when(atividadeRepositoryMock.findById(idAtividade)).thenReturn(Optional.of(existente));
+        doThrow(new RuntimeException("Atividade já fechada"))
+                .when(atividadeValidatorMock).validarAtividadeNaoFechada(existente);
+
+        AtividadeConselhal nova = new AtividadeConselhal();
+        nova.setIdAtividade(idAtividade);
+
+        assertThatThrownBy(() -> service.atualizar(nova, null, null, null, null))
+                .isInstanceOf(RuntimeException.class)
+                .hasMessage("Atividade já fechada");
+
+        verify(atividadeRepositoryMock, never()).save(any());
+    }
+
+    // ========== TESTES DE VALIDAÇÃO ==========
+
+    @Test
+    @DisplayName("deve validar atividade pendente com sucesso")
+    void deveValidarAtividadePendente() {
+        Integer idAtividade = 60;
+        AtividadeConselhal atividade = criarAtividade(idAtividade, null, null, null, null,
+                AtividadeConselhal.SITUACAO_PENDENTE);
+
+        when(atividadeRepositoryMock.findById(idAtividade)).thenReturn(Optional.of(atividade));
+        doNothing().when(atividadeValidatorMock).validarAtividadeNaoFechada(atividade);
+        when(atividadeRepositoryMock.save(any(AtividadeConselhal.class))).thenReturn(atividade);
+
+        service.validar(idAtividade);
+
+        assertThat(atividade.getInSituacao()).isEqualTo(AtividadeConselhal.SITUACAO_VALIDADA);
+        verify(logJetonServiceMock).logAtividadeValidada(idAtividade);
     }
 
     @Test
-    void criar_quandoDataForaDoMandato_lancaExcecao() {
-        atividade.setDataHoraAtividade(LocalDateTime.of(2024, 12, 31, 10, 0));
-        when(gestaoRepository.findById(1)).thenReturn(Optional.of(gestao));
-        when(gestaoConselheiroRepository.findByIdIdGestao(1))
-                .thenReturn(List.of(createVinculo(gestao, conselheiro)));
+    @DisplayName("deve lançar exceção ao validar atividade já fechada")
+    void deveLancarExcecaoAoValidarAtividadeFechada() {
+        Integer idAtividade = 61;
+        AtividadeConselhal atividade = criarAtividade(idAtividade, null, null, null, null,
+                AtividadeConselhal.SITUACAO_FECHADA);
 
-        RuntimeException ex = assertThrows(RuntimeException.class,
-                () -> service.criar(atividade, null, null, null));
-        assertTrue(ex.getMessage().contains("A data da atividade"));
+        when(atividadeRepositoryMock.findById(idAtividade)).thenReturn(Optional.of(atividade));
+        doThrow(new RuntimeException("Atividade já fechada"))
+                .when(atividadeValidatorMock).validarAtividadeNaoFechada(atividade);
+
+        assertThatThrownBy(() -> service.validar(idAtividade))
+                .isInstanceOf(RuntimeException.class)
+                .hasMessage("Atividade já fechada");
+
+        verify(atividadeRepositoryMock, never()).save(any());
     }
 
-    // =========================================================================
-    // Testes do método atualizar()
-    // =========================================================================
+    // ========== TESTES DE DESVALIDAÇÃO ==========
 
     @Test
-    void atualizar_quandoSucessoSemAlterarComprovante_deveAtualizar() {
-        atividade.setIdAtividade(1);
-        AtividadeConselhal existente = new AtividadeConselhal();
-        existente.setIdAtividade(1);
-        existente.setDataHoraRegistro(LocalDateTime.now().minusDays(1));
-        existente.setInSituacao(AtividadeConselhal.SITUACAO_PENDENTE);
-        existente.setComprovante(null);
+    @DisplayName("deve desvalidar atividade validada com sucesso")
+    void deveDesvalidarAtividadeValidada() {
+        Integer idAtividade = 70;
+        AtividadeConselhal atividade = criarAtividade(idAtividade, null, null, null, null,
+                AtividadeConselhal.SITUACAO_VALIDADA);
+        atividade.setInComputada(AtividadeConselhal.COMPUTADA_NAO);
 
-        when(atividadeRepository.findById(1)).thenReturn(Optional.of(existente));
-        when(gestaoRepository.findById(1)).thenReturn(Optional.of(gestao));
-        when(gestaoConselheiroRepository.findByIdIdGestao(1))
-                .thenReturn(List.of(createVinculo(gestao, conselheiro)));
-        when(atividadeRepository.save(any(AtividadeConselhal.class))).thenAnswer(inv -> inv.getArgument(0));
+        when(atividadeRepositoryMock.findById(idAtividade)).thenReturn(Optional.of(atividade));
+        doNothing().when(atividadeValidatorMock).validarAtividadeNaoFechada(atividade);
+        doNothing().when(atividadeValidatorMock).validarAtividadeNaoComputada(atividade);
+        when(atividadeRepositoryMock.save(any(AtividadeConselhal.class))).thenReturn(atividade);
 
-        AtividadeConselhal resultado = service.atualizar(atividade, null, null, null, null);
+        service.desvalidar(idAtividade);
 
-        assertEquals(existente.getDataHoraRegistro(), resultado.getDataHoraRegistro());
-        assertEquals(2, resultado.getQtdAtividade());
-        verify(atividadeRepository, times(1)).save(any());
-    }
-
-    @Test
-    void atualizar_quandoAtividadeFechada_lancaExcecao() {
-        atividade.setIdAtividade(1);
-        AtividadeConselhal existente = new AtividadeConselhal();
-        existente.setInSituacao(AtividadeConselhal.SITUACAO_FECHADA);
-        when(atividadeRepository.findById(1)).thenReturn(Optional.of(existente));
-
-        RuntimeException ex = assertThrows(RuntimeException.class,
-                () -> service.atualizar(atividade, null, null, null, null));
-        assertEquals("Operação negada: Esta atividade está fechada em folha.", ex.getMessage());
+        assertThat(atividade.getInSituacao()).isEqualTo(AtividadeConselhal.SITUACAO_PENDENTE);
+        verify(logJetonServiceMock).logAtividadeDesvalidada(idAtividade);
     }
 
     @Test
-    void atualizar_quandoNovoComprovanteEnviado_deveSubstituir() {
-        atividade.setIdAtividade(1);
-        Comprovante novoComp = new Comprovante();
-        novoComp.setIdComprovante(99);
-        AtividadeConselhal existente = new AtividadeConselhal();
-        existente.setInSituacao(AtividadeConselhal.SITUACAO_PENDENTE);
-        existente.setComprovante(null);
-        when(atividadeRepository.findById(1)).thenReturn(Optional.of(existente));
-        when(comprovanteService.criarComprovante(mockFile, 2, "NovoNome")).thenReturn(novoComp);
-        when(gestaoRepository.findById(1)).thenReturn(Optional.of(gestao));
-        when(gestaoConselheiroRepository.findByIdIdGestao(1))
-                .thenReturn(List.of(createVinculo(gestao, conselheiro)));
-        when(atividadeRepository.save(any(AtividadeConselhal.class))).thenAnswer(inv -> inv.getArgument(0));
+    @DisplayName("deve lançar exceção ao desvalidar atividade já computada")
+    void deveLancarExcecaoAoDesvalidarAtividadeComputada() {
+        Integer idAtividade = 71;
+        AtividadeConselhal atividade = criarAtividade(idAtividade, null, null, null, null,
+                AtividadeConselhal.SITUACAO_VALIDADA);
+        atividade.setInComputada(AtividadeConselhal.COMPUTADA_SIM);
 
-        AtividadeConselhal resultado = service.atualizar(atividade, mockFile, 2, "NovoNome", null);
+        when(atividadeRepositoryMock.findById(idAtividade)).thenReturn(Optional.of(atividade));
+        doNothing().when(atividadeValidatorMock).validarAtividadeNaoFechada(atividade);
+        doThrow(new RuntimeException("Atividade já computada"))
+                .when(atividadeValidatorMock).validarAtividadeNaoComputada(atividade);
 
-        assertNotNull(resultado.getComprovante());
-        assertEquals(99, resultado.getComprovante().getIdComprovante());
+        assertThatThrownBy(() -> service.desvalidar(idAtividade))
+                .isInstanceOf(RuntimeException.class)
+                .hasMessage("Atividade já computada");
+
+        verify(atividadeRepositoryMock, never()).save(any());
+    }
+
+    // ========== TESTES DE EXCLUSÃO ==========
+
+    @Test
+    @DisplayName("deve excluir atividade sem comprovante com sucesso")
+    void deveExcluirAtividadeSemComprovante() {
+        Integer idAtividade = 80;
+        AtividadeConselhal atividade = criarAtividade(idAtividade, null, null, null, null,
+                AtividadeConselhal.SITUACAO_PENDENTE);
+        atividade.setComprovante(null);
+
+        when(atividadeRepositoryMock.findById(idAtividade)).thenReturn(Optional.of(atividade));
+        doNothing().when(atividadeValidatorMock).validarExclusaoPermitida(atividade);
+
+        service.excluir(idAtividade);
+
+        verify(atividadeRepositoryMock).deleteById(idAtividade);
+        verify(comprovanteServiceMock, never()).excluir(anyInt());
+        verify(logJetonServiceMock).logAtividadeExcluida(any());
     }
 
     @Test
-    void atualizar_quandoIdComprovanteAntigoExistenteESemOutrasAtividades_deveExcluirComprovanteAntigo() {
-        atividade.setIdAtividade(1);
-        Integer idComprovanteAntigo = 5;
-        Comprovante antigoComp = new Comprovante();
-        antigoComp.setIdComprovante(5);
-        Comprovante novoComp = new Comprovante();
-        novoComp.setIdComprovante(99);
+    @DisplayName("deve excluir atividade e também excluir comprovante se não houver outras atividades vinculadas")
+    void deveExcluirAtividadeEComprovante() {
+        Integer idAtividade = 81;
+        Integer idComprovante = 500;
+        Comprovante comprovante = criarComprovante(idComprovante);
+        AtividadeConselhal atividade = criarAtividade(idAtividade, null, null, null, comprovante,
+                AtividadeConselhal.SITUACAO_PENDENTE);
 
-        AtividadeConselhal existente = new AtividadeConselhal();
-        existente.setInSituacao(AtividadeConselhal.SITUACAO_PENDENTE);
-        existente.setComprovante(antigoComp);
+        when(atividadeRepositoryMock.findById(idAtividade)).thenReturn(Optional.of(atividade));
+        doNothing().when(atividadeValidatorMock).validarExclusaoPermitida(atividade);
+        when(atividadeRepositoryMock.countByComprovanteIdComprovante(idComprovante)).thenReturn(0L);
 
-        when(atividadeRepository.findById(1)).thenReturn(Optional.of(existente));
-        when(comprovanteService.criarComprovante(mockFile, 2, "NovoNome")).thenReturn(novoComp);
-        when(gestaoRepository.findById(1)).thenReturn(Optional.of(gestao));
-        when(gestaoConselheiroRepository.findByIdIdGestao(1))
-                .thenReturn(List.of(createVinculo(gestao, conselheiro)));
-        when(atividadeRepository.save(any(AtividadeConselhal.class))).thenAnswer(inv -> inv.getArgument(0));
-        when(atividadeRepository.countByComprovanteIdComprovante(idComprovanteAntigo)).thenReturn(0L);
-        when(comprovanteRepository.findById(idComprovanteAntigo)).thenReturn(Optional.of(antigoComp));
+        service.excluir(idAtividade);
 
-        service.atualizar(atividade, mockFile, 2, "NovoNome", idComprovanteAntigo);
-
-        verify(comprovanteService, times(1)).excluirComprovante(idComprovanteAntigo);
+        verify(atividadeRepositoryMock).deleteById(idAtividade);
+        verify(comprovanteServiceMock).excluir(idComprovante);
+        verify(logJetonServiceMock).logAtividadeExcluida(any());
     }
 
     @Test
-    void atualizar_quandoApenasNomeComprovanteAlterado_deveAtualizarNome() {
-        atividade.setIdAtividade(1);
-        Integer idComprovanteAntigo = 5;
-        Comprovante antigoComp = new Comprovante();
-        antigoComp.setIdComprovante(5);
-        antigoComp.setNomeComprovante("Nome Antigo");
+    @DisplayName("deve lançar exceção ao excluir atividade já fechada")
+    void deveLancarExcecaoAoExcluirAtividadeFechada() {
+        Integer idAtividade = 82;
+        AtividadeConselhal atividade = criarAtividade(idAtividade, null, null, null, null,
+                AtividadeConselhal.SITUACAO_FECHADA);
 
-        AtividadeConselhal existente = new AtividadeConselhal();
-        existente.setInSituacao(AtividadeConselhal.SITUACAO_PENDENTE);
-        existente.setComprovante(antigoComp);
-        existente.setDataHoraRegistro(LocalDateTime.now());
+        when(atividadeRepositoryMock.findById(idAtividade)).thenReturn(Optional.of(atividade));
+        doThrow(new RuntimeException("Atividade fechada não pode ser excluída"))
+                .when(atividadeValidatorMock).validarExclusaoPermitida(atividade);
 
-        when(atividadeRepository.findById(1)).thenReturn(Optional.of(existente));
-        when(gestaoRepository.findById(1)).thenReturn(Optional.of(gestao));
-        when(gestaoConselheiroRepository.findByIdIdGestao(1))
-                .thenReturn(List.of(createVinculo(gestao, conselheiro)));
-        when(atividadeRepository.save(any(AtividadeConselhal.class))).thenAnswer(inv -> inv.getArgument(0));
-        when(comprovanteRepository.findById(idComprovanteAntigo)).thenReturn(Optional.of(antigoComp));
+        assertThatThrownBy(() -> service.excluir(idAtividade))
+                .isInstanceOf(RuntimeException.class)
+                .hasMessage("Atividade fechada não pode ser excluída");
 
-        // Nenhum arquivo enviado, mas novo nome informado
-        service.atualizar(atividade, null, null, "Novo Nome", idComprovanteAntigo);
+        verify(atividadeRepositoryMock, never()).deleteById(anyInt());
+    }
 
-        verify(comprovanteRepository, times(1)).save(antigoComp);
-        assertEquals("Novo Nome", antigoComp.getNomeComprovante());
-        verify(comprovanteService, never()).excluirComprovante(any());
+    // ========== TESTES DE CONSULTA ==========
+
+    @Test
+    @DisplayName("deve buscar atividade por ID com sucesso")
+    void deveBuscarAtividadePorId() {
+        Integer id = 90;
+        AtividadeConselhal atividade = criarAtividade(id, null, null, null, null, "P");
+        when(atividadeRepositoryMock.findById(id)).thenReturn(Optional.of(atividade));
+
+        Optional<AtividadeConselhal> resultado = service.buscarPorId(id);
+
+        assertThat(resultado).isPresent();
+        assertThat(resultado.get().getIdAtividade()).isEqualTo(id);
     }
 
     @Test
-    void atualizar_quandoNovoComprovanteMasAntigoAindaEmUso_naoDeveExcluirAntigo() {
-        atividade.setIdAtividade(1);
-        Integer idComprovanteAntigo = 5;
-        Comprovante antigoComp = new Comprovante();
-        antigoComp.setIdComprovante(5);
-        Comprovante novoComp = new Comprovante();
-        novoComp.setIdComprovante(99);
+    @DisplayName("deve listar atividades paginadas com filtros")
+    void deveListarAtividadesPaginadasComFiltros() {
+        // Dado
+        String termo = "teste";
+        String situacao = "P";
+        String turno = "M";
+        String comprovanteFiltro = "S";
+        LocalDate dataInicio = LocalDate.now().minusDays(10);
+        LocalDate dataFim = LocalDate.now();
+        int page = 0, size = 10;
+        String sortField = "dataHoraAtividade";
+        String sortDir = "desc";
 
-        AtividadeConselhal existente = new AtividadeConselhal();
-        existente.setInSituacao(AtividadeConselhal.SITUACAO_PENDENTE);
-        existente.setComprovante(antigoComp);
-
-        when(atividadeRepository.findById(1)).thenReturn(Optional.of(existente));
-        when(comprovanteService.criarComprovante(mockFile, 2, "NovoNome")).thenReturn(novoComp);
-        when(gestaoRepository.findById(1)).thenReturn(Optional.of(gestao));
-        when(gestaoConselheiroRepository.findByIdIdGestao(1))
-                .thenReturn(List.of(createVinculo(gestao, conselheiro)));
-        when(atividadeRepository.save(any(AtividadeConselhal.class))).thenAnswer(inv -> inv.getArgument(0));
-        // Outras atividades ainda usam o comprovante antigo
-        when(atividadeRepository.countByComprovanteIdComprovante(idComprovanteAntigo)).thenReturn(2L);
-
-        service.atualizar(atividade, mockFile, 2, "NovoNome", idComprovanteAntigo);
-
-        verify(comprovanteService, never()).excluirComprovante(idComprovanteAntigo);
-    }
-
-    // =========================================================================
-    // Testes do método validar()
-    // =========================================================================
-
-    @Test
-    void validar_quandoSucesso_deveMudarSituacaoParaValidada() {
-        AtividadeConselhal pendente = new AtividadeConselhal();
-        pendente.setInSituacao(AtividadeConselhal.SITUACAO_PENDENTE);
-        when(atividadeRepository.findById(1)).thenReturn(Optional.of(pendente));
-        when(atividadeRepository.save(any())).thenReturn(pendente);
-
-        service.validar(1);
-
-        assertEquals(AtividadeConselhal.SITUACAO_VALIDADA, pendente.getInSituacao());
-        verify(atividadeRepository, times(1)).save(pendente);
-    }
-
-    @Test
-    void validar_quandoAtividadeFechada_lancaExcecao() {
-        AtividadeConselhal fechada = new AtividadeConselhal();
-        fechada.setInSituacao(AtividadeConselhal.SITUACAO_FECHADA);
-        when(atividadeRepository.findById(1)).thenReturn(Optional.of(fechada));
-
-        RuntimeException ex = assertThrows(RuntimeException.class,
-                () -> service.validar(1));
-        assertEquals("Operação negada: Esta atividade está fechada em folha.", ex.getMessage());
-    }
-
-    @Test
-    void validar_quandoAtividadeNaoEncontrada_lancaExcecao() {
-        when(atividadeRepository.findById(99)).thenReturn(Optional.empty());
-        assertThrows(RuntimeException.class, () -> service.validar(99));
-    }
-
-    // =========================================================================
-    // Testes do método desvalidar()
-    // =========================================================================
-
-    @Test
-    void desvalidar_quandoSucesso_deveMudarSituacaoParaPendente() {
-        AtividadeConselhal validada = new AtividadeConselhal();
-        validada.setInSituacao(AtividadeConselhal.SITUACAO_VALIDADA);
-        validada.setInComputada(AtividadeConselhal.COMPUTADA_NAO);
-        when(atividadeRepository.findById(1)).thenReturn(Optional.of(validada));
-        when(atividadeRepository.save(any())).thenReturn(validada);
-
-        service.desvalidar(1);
-
-        assertEquals(AtividadeConselhal.SITUACAO_PENDENTE, validada.getInSituacao());
-        verify(atividadeRepository, times(1)).save(validada);
-    }
-
-    @Test
-    void desvalidar_quandoAtividadeComputada_lancaExcecao() {
-        AtividadeConselhal computada = new AtividadeConselhal();
-        computada.setInComputada(AtividadeConselhal.COMPUTADA_SIM);
-        when(atividadeRepository.findById(1)).thenReturn(Optional.of(computada));
-
-        RuntimeException ex = assertThrows(RuntimeException.class,
-                () -> service.desvalidar(1));
-        assertEquals("Operação negada: Esta atividade já foi computada em um processamento financeiro.",
-                ex.getMessage());
-    }
-
-    // =========================================================================
-    // Testes do método excluir()
-    // =========================================================================
-
-    @Test
-    void excluir_quandoSucessoSemComprovante_deveRemoverAtividade() {
-        AtividadeConselhal atividadeParaExcluir = new AtividadeConselhal();
-        atividadeParaExcluir.setInSituacao(AtividadeConselhal.SITUACAO_PENDENTE);
-        atividadeParaExcluir.setInComputada(AtividadeConselhal.COMPUTADA_NAO);
-        atividadeParaExcluir.setComprovante(null);
-        when(atividadeRepository.findById(1)).thenReturn(Optional.of(atividadeParaExcluir));
-        doNothing().when(atividadeRepository).deleteById(1);
-
-        service.excluir(1);
-
-        verify(atividadeRepository, times(1)).deleteById(1);
-        verify(comprovanteService, never()).excluirComprovante(any());
-    }
-
-    @Test
-    void excluir_quandoComprovanteAssociadoSemOutrasAtividades_deveExcluirComprovante() {
-        Comprovante comp = new Comprovante();
-        comp.setIdComprovante(5);
-        AtividadeConselhal atividadeComComp = new AtividadeConselhal();
-        atividadeComComp.setInSituacao(AtividadeConselhal.SITUACAO_PENDENTE);
-        atividadeComComp.setInComputada(AtividadeConselhal.COMPUTADA_NAO);
-        atividadeComComp.setComprovante(comp);
-        when(atividadeRepository.findById(1)).thenReturn(Optional.of(atividadeComComp));
-        when(atividadeRepository.countByComprovanteIdComprovante(5)).thenReturn(0L);
-        doNothing().when(atividadeRepository).deleteById(1);
-        doNothing().when(comprovanteService).excluirComprovante(5);
-
-        service.excluir(1);
-
-        verify(comprovanteService, times(1)).excluirComprovante(5);
-    }
-
-    @Test
-    void excluir_quandoAtividadeFechada_lancaExcecao() {
-        AtividadeConselhal fechada = new AtividadeConselhal();
-        fechada.setInSituacao(AtividadeConselhal.SITUACAO_FECHADA);
-        when(atividadeRepository.findById(1)).thenReturn(Optional.of(fechada));
-
-        RuntimeException ex = assertThrows(RuntimeException.class, () -> service.excluir(1));
-        assertTrue(ex.getMessage().contains("não pode ser excluída"));
-    }
-
-    @Test
-    void excluir_quandoDataIntegrityViolation_lancaExcecao() {
-        AtividadeConselhal pendente = new AtividadeConselhal();
-        pendente.setInSituacao(AtividadeConselhal.SITUACAO_PENDENTE);
-        pendente.setInComputada(AtividadeConselhal.COMPUTADA_NAO);
-        when(atividadeRepository.findById(1)).thenReturn(Optional.of(pendente));
-        doThrow(DataIntegrityViolationException.class).when(atividadeRepository).deleteById(1);
-
-        RuntimeException ex = assertThrows(RuntimeException.class, () -> service.excluir(1));
-        assertEquals(
-                "Não é possível remover esta atividade pois ela já possui vínculos com o histórico financeiro (Pagamentos de Jeton).",
-                ex.getMessage());
-    }
-
-    @Test
-    void excluir_quandoComprovantePossuiOutrasAtividades_naoDeveExcluirComprovante() {
-        Comprovante comp = new Comprovante();
-        comp.setIdComprovante(5);
-        AtividadeConselhal atividadeComComp = new AtividadeConselhal();
-        atividadeComComp.setInSituacao(AtividadeConselhal.SITUACAO_PENDENTE);
-        atividadeComComp.setInComputada(AtividadeConselhal.COMPUTADA_NAO);
-        atividadeComComp.setComprovante(comp);
-        when(atividadeRepository.findById(1)).thenReturn(Optional.of(atividadeComComp));
-        when(atividadeRepository.countByComprovanteIdComprovante(5)).thenReturn(2L); // outras atividades
-        doNothing().when(atividadeRepository).deleteById(1);
-
-        service.excluir(1);
-
-        verify(comprovanteService, never()).excluirComprovante(5);
-    }
-
-    @Test
-    void excluir_quandoFalhaAoExcluirComprovante_deveApenasLogarEProsseguir() {
-        Comprovante comp = new Comprovante();
-        comp.setIdComprovante(5);
-        AtividadeConselhal atividadeComComp = new AtividadeConselhal();
-        atividadeComComp.setInSituacao(AtividadeConselhal.SITUACAO_PENDENTE);
-        atividadeComComp.setInComputada(AtividadeConselhal.COMPUTADA_NAO);
-        atividadeComComp.setComprovante(comp);
-        when(atividadeRepository.findById(1)).thenReturn(Optional.of(atividadeComComp));
-        when(atividadeRepository.countByComprovanteIdComprovante(5)).thenReturn(0L);
-        doNothing().when(atividadeRepository).deleteById(1);
-        doThrow(new RuntimeException("FTP error")).when(comprovanteService).excluirComprovante(5);
-
-        // Não deve lançar exceção
-        assertDoesNotThrow(() -> service.excluir(1));
-
-        verify(atividadeRepository, times(1)).deleteById(1);
-        verify(comprovanteService, times(1)).excluirComprovante(5);
-    }
-
-    // =========================================================================
-    // Testes de consulta (listar, buscar, contagens)
-    // =========================================================================
-
-    @Test
-    void listarComPaginacaoEPesquisa_deveChamarRepositoryComParametrosCorretos() {
-        Page<AtividadeConselhal> paginaEsperada = new PageImpl<>(Collections.emptyList());
-        when(atividadeRepository.pesquisarPaginado(anyString(), anyString(), anyString(), anyString(),
+        Page<AtividadeConselhal> paginaEsperada = new PageImpl<>(List.of());
+        when(atividadeRepositoryMock.findAllByFilters(anyString(), anyString(), anyString(), anyString(),
                 any(), any(), any(Pageable.class))).thenReturn(paginaEsperada);
 
+        // Quando
         Page<AtividadeConselhal> resultado = service.listarComPaginacaoEPesquisa(
-                "termo", "P", "M", "S", LocalDate.now(), LocalDate.now(), 0, 10, "dataHoraAtividade", "desc");
+                termo, situacao, turno, comprovanteFiltro, dataInicio, dataFim, page, size, sortField, sortDir);
 
-        assertNotNull(resultado);
-        verify(atividadeRepository, times(1)).pesquisarPaginado(eq("termo"), eq("P"), eq("M"), eq("S"),
-                any(), any(), any(Pageable.class));
-    }
-
-    @Test
-    void listarComPaginacaoEPesquisa_quandoSizeZero_deveUsarMaxInteger() {
-        Pageable expectedPageable = PageRequest.of(0, Integer.MAX_VALUE,
-                Sort.by(Sort.Direction.DESC, "dataHoraAtividade"));
-        Page<AtividadeConselhal> pagina = new PageImpl<>(Collections.emptyList());
-        when(atividadeRepository.pesquisarPaginado(anyString(), anyString(), anyString(), anyString(),
-                any(), any(), eq(expectedPageable))).thenReturn(pagina);
-
-        service.listarComPaginacaoEPesquisa("", "", "", "", null, null, 0, 0, "dataHoraAtividade", "desc");
-
-        verify(atividadeRepository, times(1)).pesquisarPaginado(anyString(), anyString(), anyString(), anyString(),
-                any(), any(), eq(expectedPageable));
-    }
-
-    @Test
-    void buscarPorId_deveRetornarOptional() {
-        when(atividadeRepository.findById(1)).thenReturn(Optional.of(atividade));
-        Optional<AtividadeConselhal> result = service.buscarPorId(1);
-        assertTrue(result.isPresent());
-        assertEquals(atividade, result.get());
-    }
-
-    @Test
-    void listarPorConselheiroComFiltros_deveChamarRepository() {
-        Pageable pageable = PageRequest.of(0, 5);
-        Page<AtividadeConselhal> pagina = new PageImpl<>(Collections.emptyList());
-        when(atividadeRepository.findByConselheiroAndFiltros(eq(10), any(), any(), eq("P"), eq(pageable)))
-                .thenReturn(pagina);
-
-        Page<AtividadeConselhal> resultado = service.listarPorConselheiroComFiltros(10, LocalDate.now(),
-                LocalDate.now(), "P", pageable);
-        assertNotNull(resultado);
-        verify(atividadeRepository, times(1)).findByConselheiroAndFiltros(
-                eq(10), any(), any(), eq("P"), eq(pageable));
-    }
-
-    @Test
-    void listarPorConselheiro_deveChamarRepository() {
-        Pageable pageable = PageRequest.of(0, 10);
-        Page<AtividadeConselhal> pagina = new PageImpl<>(Collections.emptyList());
-        when(atividadeRepository.findByConselheiroIdPessoa(10, pageable)).thenReturn(pagina);
-
-        Page<AtividadeConselhal> resultado = service.listarPorConselheiro(10, pageable);
-        assertNotNull(resultado);
-        verify(atividadeRepository, times(1)).findByConselheiroIdPessoa(10, pageable);
-    }
-
-    @Test
-    void sumPontosValidadasNaoComputadas_quandoSomaNull_deveRetornarZero() {
-        when(atividadeRepository.sumPontosAtividadesValidadasNaoComputadas(10)).thenReturn(null);
-        int soma = service.sumPontosValidadasNaoComputadas(10);
-        assertEquals(0, soma);
-    }
-
-    @Test
-    void sumPontosValidadasNaoComputadas_quandoSomaNaoNull_deveRetornarValor() {
-        when(atividadeRepository.sumPontosAtividadesValidadasNaoComputadas(10)).thenReturn(42);
-        int soma = service.sumPontosValidadasNaoComputadas(10);
-        assertEquals(42, soma);
-    }
-
-    @Test
-    void countPendentesPorConselheiro_deveChamarRepository() {
-        when(atividadeRepository.countByConselheiroIdPessoaAndInSituacao(10, "P")).thenReturn(5L);
-        long count = service.countPendentesPorConselheiro(10);
-        assertEquals(5L, count);
-    }
-
-    @Test
-    void countTotalPorConselheiro_deveChamarRepository() {
-        when(atividadeRepository.countByConselheiroIdPessoa(10)).thenReturn(20L);
-        long count = service.countTotalPorConselheiro(10);
-        assertEquals(20L, count);
-    }
-
-    @Test
-    void contarAtividadesPorComprovante_deveChamarRepository() {
-        when(atividadeRepository.countByComprovanteIdComprovante(5)).thenReturn(3L);
-        long count = service.contarAtividadesPorComprovante(5);
-        assertEquals(3L, count);
-    }
-
-    // Helper
-    private GestaoConselheiro createVinculo(Gestao gestao, Conselheiro conselheiro) {
-        GestaoConselheiro vinculo = new GestaoConselheiro();
-        vinculo.setGestao(gestao);
-        vinculo.setConselheiro(conselheiro);
-        vinculo.setInSituacao(GestaoConselheiro.SITUACAO_ATIVO);
-        return vinculo;
+        // Então
+        assertThat(resultado).isNotNull();
+        verify(atividadeRepositoryMock).findAllByFilters(eq(termo), eq(situacao), eq(turno), eq(comprovanteFiltro),
+                eq(dataInicio), eq(dataFim), any(Pageable.class));
     }
 }
